<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gundul"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/afdhol"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:layout_marginTop="50dp"/>


        <Button
            android:id="@+id/al-fath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/al_fath_27"
            android:layout_marginStart="95dp"
            android:layout_marginTop="15dp"
            android:textSize="12sp"
            android:background="@drawable/custom1"
            android:textColor="@color/colorPrimaryDark"/>


            <Button
                android:id="@+id/hrbukh1727"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom2"
                android:padding="5dp"
                android:text="@string/h_r_al_bukhori_no_1727"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />
        <Button
            android:id="@+id/hrmus1301"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom2"
            android:padding="5dp"
            android:text="@string/h_r_muslim_no_1301"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        </LinearLayout>

</LinearLayout>